@@ -26,21 +26,40 @@ end % if length
 
 if strcmpi(flag(1:4),'init') % Initialize
     delete(findobj(gca,'-regexp','Tag','*Locations'))
-    initLoc = line(state.Population(:,ijk(1)),state.Population(:,ijk(2)),...
-        'Color',0.75*ones(1,3),...
-        'Marker','.',...
-        'LineStyle','none',...
-        'Tag','Initial Locations') ;
+    if size(ijk,2) == 1 % One dimensional
+        initLoc = line(state.Population(:,ijk(1)),...
+            zeros(size(state.Population,1),1),...
+            'Color',0.75*ones(1,3),...
+            'Marker','.',...
+            'LineStyle','none',...
+            'Tag','Initial Locations') ;
+    elseif size(ijk,2) == 2 % Two dimensional
+        initLoc = line(state.Population(:,ijk(1)),...
+            state.Population(:,ijk(2)),...
+            'Color',0.75*ones(1,3),...
+            'Marker','.',...
+            'LineStyle','none',...
+            'Tag','Initial Locations') ;
+    elseif size(ijk,3) == 3 % Two dimensional
+        initLoc = line(state.Population(:,ijk(1)),...
+            state.Population(:,ijk(2)),...
+            state.Population(:,ijk(3)),...
+            'Color',0.75*ones(1,3),...
+            'Marker','.',...
+            'LineStyle','none',...
+            'Tag','Initial Locations') ;
+    end
     
     % Set reasonable axes limits
     % ---------------------------------------------------------------------
-    xlim([options.PopInitRange(1,ijk(1)) options.PopInitRange(2,ijk(1))])
+    xlim([options.PopInitRange(1,ijk(1)) - eps, ...
+        options.PopInitRange(2,ijk(1)) + eps])
     if size(ijk,2) > 1
-        ylim([options.PopInitRange(1,ijk(2)) ...
-            options.PopInitRange(2,ijk(2))])
+        ylim([options.PopInitRange(1,ijk(2)) - eps, ...
+            options.PopInitRange(2,ijk(2))]  + eps)
         if size(ijk,2) > 2
-            zlim([options.PopInitRange(1,ijk(3)) ...
-                options.PopInitRange(2,ijk(3))])
+            zlim([options.PopInitRange(1,ijk(3)) - eps, ...
+                options.PopInitRange(2,ijk(3))   + eps])
         end % if size
     end % if size
     % ---------------------------------------------------------------------
